--- a/index.html
+++ b/index.html
@@ -53,10 +53,8 @@ The western grey kangaroo (Macropus fuliginosus) is slightly smaller again at ab
 The antilopine kangaroo (Macropus antilopinus) is, essentially, the far-northern equivalent of the eastern and western grey kangaroos. It is sometimes referred to as the antilopine wallaroo, but in behaviour and habitat it is more similar to red and grey kangaroos. Like them, it is a creature of the grassy plains and woodlands, and gregarious. Its name comes from its fur, which is similar in colour and texture to that of antelopes. Characteristically, the noses of males swell behind the nostrils. This enlarges nasal passages and allows them to release more heat in hot and humid climates.
                                             <h3 id="wallabies>Comparison with wallabies</h3>
     <p>
-                                       
-       </p>
-            <p>
-             
+       Kangaroos and wallabies belong to the same taxonomic family (Macropodidae) and often the same genera, but kangaroos are specifically categorised into the six largest species of the family. The term wallaby is an informal designation generally used for any macropod that is smaller than a kangaroo or wallaroo that has not been designated otherwise.                                            
+        </p>
     <a href="#kangaroos">Back to the top</a>
     <a href="http://en.wikipedia.org/wiki/Kangaroo">Read more on Wikipedia</a>
     </p>
