--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-
+<script>
 angleMode = "degrees";
 
 var Spring = function(x, y, l) {
@@ -186,3 +186,4 @@ mouseDragged = function() {
 mouseReleased = function() {
   bob.stopDragging();
 };
+</script>
